@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-05-29                                -
+---------------------------------------------
+.: WSM: BugFix: Checking opening info (WSM-36)
+
+---------------------------------------------
 - 2020-05-28                                -
 ---------------------------------------------
 .: WSM: Task: Update managing items flow (WSM-54)
